# src/controllers/comment/commentValidator.ts
@@ -2,12 +2,12 @@ import {Request, Response, NextFunction } from "express";
 import Joi from "joi";
 
 const validator = Joi.object({
-    comment: Joi.string().required(),
+    content: Joi.string().required(),
     author: Joi.string().required(),
 });
 
 const commentValidator = (req: Request, res: Response, next: NextFunction) => {
-    const payload = req.body;
+    const payload = {content: req.body.content, author: req.body.userId};
     const { error } = validator.validate(payload);
     if (error) {
         return res.status(400).json({
